--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,6 @@
 @tailwind utilities;
 
 
- 
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
 body {
   padding: 0;
@@ -40,4 +34,11 @@ body {
 /* Default button for clothing site */
 .default-button {
   @apply rounded bg-gray-500 py-2  px-4 text-white shadow outline-none hover:bg-gray-600  active:bg-gray-700;
+}
+
+/* BEAUTIFUL UI FOR CLOTHING SITE */
+input,
+select,
+textarea {
+  @apply rounded border p-2  outline-none ring-indigo-300  focus:ring;
 }
