--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-
+a {
+  @apply text-blue-500 hover:text-blue-800;
+}
 
 * {
   box-sizing: border-box;
@@ -41,4 +43,9 @@ input,
 select,
 textarea {
   @apply rounded border p-2  outline-none ring-indigo-300  focus:ring;
+}
+
+/* Beautiful dropdown-link */
+.dropdown-link {
+  @apply block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900;
 }
