--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,3 +49,11 @@ textarea {
 .dropdown-link {
   @apply block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900;
 }
+
+.alert-error {
+  @apply my-3 rounded-lg bg-red-100 p-3 text-red-700;
+}
+
+.alert-success {
+  @apply my-3 rounded-lg bg-green-100 p-3 text-green-700;
+}
