--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html,
 body {
   padding: 0;
@@ -12,7 +11,7 @@ body {
 }
 
 a {
-  @apply hover:text-blue-800;
+  @apply text-cyan-500 hover:text-cyan-800;
 }
 
 * {
@@ -23,31 +22,21 @@ a {
   @apply mb-5  block   rounded-lg border border-gray-200  shadow-md;
 }
 
-/* Primary button for clothing site */
 .primary-button {
-  @apply rounded bg-blue-500 py-2  px-4 text-white shadow outline-none hover:bg-blue-600  active:bg-blue-700;
+  @apply rounded bg-rose-600 py-2 px-4 shadow outline-none hover:bg-rose-800  active:bg-rose-500 text-white;
 }
-
-/* Secondary button for clothing site */
-.secondary-button {
-  @apply rounded bg-gray-500 py-2  px-4 text-white shadow outline-none hover:bg-gray-600  active:bg-gray-700;
-}
-
-/* Default button for clothing site */
 .default-button {
-  @apply rounded bg-gray-500 py-2  px-4 text-white shadow outline-none hover:bg-gray-600  active:bg-gray-700;
+  @apply rounded bg-cyan-500 py-2  px-4 text-white shadow outline-none hover:bg-gray-200  active:bg-cyan-300;
 }
 
-/* BEAUTIFUL UI FOR CLOTHING SITE */
 input,
 select,
 textarea {
   @apply rounded border p-2  outline-none ring-indigo-300  focus:ring;
 }
 
-/* Beautiful dropdown-link */
 .dropdown-link {
-  @apply block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900;
+  @apply flex p-2 hover:bg-gray-200;
 }
 
 .alert-error {
